--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,21 @@
-/* .header-app{
+html,
+body {
+    margin: 0;
+    margin-top: 0;
+}
+.search-symbol{
+    background-color: white;
     position: fixed;
-    z-index: 1000;
-} */
+    top: 40%;
+    left:40%;
+}
+
+.orders-page{
+    height: 50%;
+    width: 45%;
+    background-color: white;
+    position: fixed;
+    top: 20%;
+    left:28%;
+
+}
