--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
     justify-content: space-around;
     background-image: url("https://cdn.hipwallpaper.com/i/0/24/13Fcmq.jpg");
     width: 100vw;
+    height: 8vh;
     
 
 }
@@ -16,11 +17,11 @@
 .deposit-container {
     /* background: #0f0c29;
     background: -webkit-linear-gradient(to right, #0f0c29, #302b63, #24243e); */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    right: 25.5%;
+
+    /* align-items: center; */
     /* height:50vh;   */
-    margin: 0 auto;
 }
 
 .deposit-form{
