--- a/src/components/Markets/Markets.css
+++ b/src/components/Markets/Markets.css
@@ -1,6 +1,24 @@
 .body-m{
     background-image: url("https://wallpaperaccess.com/full/1092758.jpg");
+    height: 150vh;
+    width: 100vw;
 }
+
+.buttons-container{
+    display: flex;
+    justify-content: center;
+    height: 5%;
+    width: 100vw;
+
+}
+/* 
+.buttons-m{
+    margin: 0;
+    width: 100%;
+    font-size: 20px;
+    color: white;
+} */
+
 
 .quotes-container-m{
     position: relative;
