--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,28 +14,11 @@
     justify-content: space-evenly;
 }
 
-.deposit-container {
-    /* background: #0f0c29;
-    background: -webkit-linear-gradient(to right, #0f0c29, #302b63, #24243e); */
-    position: absolute;
-    right: 25.5%;
-
-    /* align-items: center; */
-    /* height:50vh;   */
-}
-
-.deposit-form{
-    height: 20vh;
-    width: 20vw;
-    position: absolute;
-    top: 30%;
-    background-color: red;
-}
-
-#wallet-id{
-    position: relative;
-    right: 0%
-
+.search-h{
+    height: 20%;
+    width: 20%;
+    background: #0f0c29;
+    background: -webkit-linear-gradient(to right, #0f0c29, #302b63, #24243e);
 }
 
 
