--- a/src/components/Markets/Crypto/Crypto.css
+++ b/src/components/Markets/Crypto/Crypto.css
@@ -20,3 +20,15 @@
     
     
 }
+
+.crypto-t{
+    background-image: url('./Crypto.screenshot.PNG');
+    height: 100vh;
+    width: 100vw;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    left: 20%;
+    
+}
