--- a/src/components/Watchlist/Watchlist.css
+++ b/src/components/Watchlist/Watchlist.css
@@ -2,8 +2,18 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
-    height: 28.5vh;
-    width: 14.37vw;
+    height: 34.2vh;
+    width: 15.4.6vw;
     position: relative;
     overflow-x: hidden;
+}
+
+.display-w-container{
+    width: 14vw;
+
+}
+
+.content-w{
+    display: flex;
+    justify-content: space-around;
 }
