solution to bar chart not displaying on initial render was pushing data from get request to copied variables of state and then setting this.setState of the new data plus copied state

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,18 @@ body {
 
 .form-input-a{
     width: 20vw;
-    bottom: 0;
+    position: absolute;
+    top: 90%;
+    color: white;
+    background-color: green;
 
+}
+
+.input-a{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    left: 15%;
 }
