--- a/src/components/Authentication/Authentication.css
+++ b/src/components/Authentication/Authentication.css
@@ -19,18 +19,17 @@
 }
 
 .secondary{
-    height: 50%;
+    height: 40%;
     width: 30%;
     background-color: white;
+    opacity: 0.8;
     position: absolute;
     top: 25%;
     left: 30%;
     display: flex;
     justify-content: center;
     margin: 30px;
-    background-color: #ffffff;
     border: 1px solid black;
-    /* opacity: 0.5; */
     padding: 8px 10px;
     margin-bottom: 15px;
     border: none;
@@ -41,9 +40,36 @@
 }
 
 .form-container-a{
+    width: 25vw;
+    background-color: black;
     position: relative;
     right: 4%;
     display: flex;
     justify-content: center;
-    
+
+}
+
+
+.button-containers-a{
+    width: 200%;
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    top: 40%;
+    right: 45.5%;
+}
+
+.button{
+    /* margin: 20%; */
+    height: 5vh;
+    width: 100%;
+    color: white;
+    background-color: black;
+
+}
+
+
+.input-fields{
+    position: relative;
+    right: 5%;
 }
