--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -21,7 +21,7 @@
 
 .watchlist{
     background-image: url("https://us.123rf.com/450wm/gujarichleaw/gujarichleaw1903/gujarichleaw190300036/120481739-abstract-light-blue-black-gradient-color-background-vector-illustration-eps10.jpg?ver=6");
-    height: 46vh;
+    height: 48.1vh;
     width: 15.5%;
     color: white;
     position: relative;
@@ -34,8 +34,10 @@
     font-size: 50px;
     position: absolute;
     top: 70%;
-    left: 25%;
+    left: 33%;
     color: white;
-    letter-spacing: 20px;
+    letter-spacing: 18px;
+    border: solid black 2px;
+    padding: 20px;
 
 }
