added delete endpoint. moved axios request for company reports to profile.js so it can pass data down as prop to report.js and fix leak.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,8 @@
 .footer-container{
     background-image: url("https://cdn.hipwallpaper.com/i/0/24/13Fcmq.jpg");
-    height: 8.3vh;
+    height: 6vh;
     width: 100vw;
     overflow-x: hidden;
+    padding-left: 15%;
 
 }
