--- a/src/components/Profile/DisplayProfile/DisplayProfile.css
+++ b/src/components/Profile/DisplayProfile/DisplayProfile.css
@@ -28,10 +28,10 @@
 }
 
 .image-container{
-    /* display: flex;
+    display: flex;
     justify-content: center;
-    position: relative; */
-    /* top: 10% */
+    position: relative;
+    left: 2%;
 }
 
 
