created build file to host app via digitalocean

--- a/src/components/History/History.css
+++ b/src/components/History/History.css
@@ -14,7 +14,7 @@
 } */
 
 .history-d-body{
-    height: 83.7vh;
+    height: 86vh;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -58,7 +58,7 @@
 }
 
 .content-container-sh{
-    background-color: gold;
+    background-color: white;
     width: 90vw;
     padding: 0.5%;
     display: inline-flex;
