--- a/src/components/Authentication/Authentication.css
+++ b/src/components/Authentication/Authentication.css
@@ -10,7 +10,7 @@
 .img-a{
     height: 100vh;
     width: 100vw;
-    background-image: url('../Authentication//BullvBear4.jpg');
+    background-image: url('../Authentication//BullvBear6.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -36,6 +36,7 @@
     background-color: transparent;
     color: #fff;
     font-size: 20px;
+    font-weight: bold;
     
 }
 
