--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -9,6 +9,7 @@
     position: relative;
     top: 50%;
     left: 4%;
+    border: 5px solid black;
 }
 
 .accounts-a{
@@ -17,6 +18,7 @@
     width: 15%;
     color: white;
     right: 6.5%;
+    border: 5px solid black;
 }
 
 .watchlist{
@@ -27,6 +29,7 @@
     position: relative;
     bottom: 20%;
     left: 2%;
+    border: 5px solid black;
 
 }
 
