--- a/src/components/Authentication/Authentication.css
+++ b/src/components/Authentication/Authentication.css
@@ -3,41 +3,32 @@
     width: 100vw;
     overflow-y: hidden;
     overflow-x: hidden;
-
-
-}
-
-.img-a{
-    height: 100vh;
-    width: 100vw;
     background-image: url('../Authentication//BullvBear6.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    filter: blur(3px);
-    -webkit-filter: blur(3px);
+
+
+
 }
+
 
 .secondary{
     height: 40%;
     width: 30%;
+    margin: 0 auto;
+    margin-top: 25vh;
     background-color: white;
     opacity: 0.8;
-    position: absolute;
-    top: 25%;
-    left: 30%;
     display: flex;
     justify-content: center;
-    margin: 30px;
     border: 1px solid black;
     padding: 8px 10px;
-    margin-bottom: 15px;
     border: none;
     background-color: transparent;
     color: #fff;
     font-size: 20px;
     font-weight: bold;
-    
 }
 
 .form-container-a{
@@ -61,7 +52,6 @@
 }
 
 .button{
-    /* margin: 20%; */
     height: 5vh;
     width: 100%;
     color: white;
