--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,25 @@ body {
     position: fixed;
     top: 40%;
     left:40%;
+    padding: 1%;
+    border-radius: 15px 15px 15px 15px;
 }
 
 .search-a-container{
     position: relative;
-    top: 30%;
+    top: 10%;
     display: flex;
     flex-direction: column;
+}
+.search-a-container input{
+    height: 3vh;
+}
+.search-a-container button{
+    margin-top: 14%;
+    border-radius: 15px 15px 15px 15px;
+    padding: 1%;
+    margin-left: 1.5%;
+
 }
 
 .orders-page{
