--- a/src/components/Authentication/Authentication.css
+++ b/src/components/Authentication/Authentication.css
@@ -19,7 +19,7 @@
     margin: 0 auto;
     margin-top: 25vh;
     background-color: white;
-    opacity: 0.8;
+    opacity: 0.94;
     display: flex;
     justify-content: center;
     border: 1px solid black;
@@ -29,6 +29,7 @@
     color: #fff;
     font-size: 20px;
     font-weight: bold;
+
 }
 
 .form-container-a{
@@ -38,6 +39,7 @@
     right: 4%;
     display: flex;
     justify-content: center;
+    border-radius: 15px 15px 15px 15px;
 
 }
 
@@ -49,6 +51,7 @@
     position: relative;
     top: 40%;
     right: 48%;
+    
 }
 
 .button{
@@ -58,6 +61,7 @@
     background-color: green;
     font-size: 20px;
     font-weight: bold;
+    border-radius: 15px 15px 15px 15px;
 
 }
 
